--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -4,7 +4,7 @@
 	}
 }
 @mixin mq-from($media) {
-	@media only screen and (min-width: #{$media} + 1px) {
+	@media only screen and (min-width: #{$media + 1}) {
 		@content;
 	}
 }
