--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'helpers/variables';
 @import 'helpers/mixins';
 @import 'helpers/helpers';
+@import 'helpers/animations';
 
 @import 'layout/type';
 @import 'layout/base';
