--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,5 +1,5 @@
 // Basics
-$contentPadding: 2em;
+$pd-content: 2em;
 
 // Media Query sizes
 $phone: 480px;
@@ -8,7 +8,7 @@ $tablet-l: 1024px;
 $desktop: 980px;
 $xlarge: 1200px;
 
-// Animations
-$trans-speed: .25s;
+// Timing
+$speed-def: .25s;
 
 // Colours
