--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -8,3 +8,8 @@
 		@content;
 	}
 }
+@mixin mq-to-from($media, $media2) {
+	@media only screen and (min-width: #{$media}) and (max-width: #{$media2}) {
+		@content;
+	}
+}
