--- a/assets/scss/helpers/_helpers.scss
+++ b/assets/scss/helpers/_helpers.scss
@@ -1,6 +1,6 @@
 // Media Query indicators 
 // Helpers for easy javascript MQ-targeting
-// NOTE: Overlaps occur between
+// NOTE: Overlaps occur
 
 .mq-indicator {
 	display: none;
