--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -1,4 +1,4 @@
-.flexbox {
+.fb {
 	display: flex;
 	flex-wrap: wrap;
 
@@ -8,18 +8,20 @@
 	}
 
 	&.fb-jcenter {justify-content: center;}
+	&.fb-spacebetween {justify-content: space-between;}
 	&.fb-vmiddle {align-items: center;}
 	&.fb-end {align-items: flex-end;}
 	&.fb-stretch {align-items: stretch;}
 	&.fb-flex {
 		> * {
 			flex: 1 0 auto;
+			max-width: 100%;
 		}
 	}
 
 	@include mq-to($phone) {
 		> * {
-			width: 100%;
+			// width: 100%;
 		}
 	}
 }
