--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -13,3 +13,17 @@
 		@content;
 	}
 }
+@mixin mq-ie() {
+	@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+		/* IE10+ specific styles */ 
+		@content;
+	}
+}
+
+@function tint($color, $percentage) {
+	@return mix(white, $color, $percentage);
+}
+
+@function shade($color, $percentage) {
+  @return mix(black, $color, $percentage);
+}
